epub-modules/epub-cfi/src/models/epubcfi.js
define(['require', 'module'], function (require, module) {

    var Parser = (function(){
      /*
       * Generated by PEG.js 0.7.0.
       *
       * http://pegjs.majda.cz/
       */

      function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         *
         * For portability, we also escape escape all control and non-ASCII
         * characters. Note that "\0" and "\v" escape sequences are not used
         * because JSHint does not like the first and IE the second.
         */
         return '"' + s
          .replace(/\\/g, '\\\\')  // backslash
          .replace(/"/g, '\\"')    // closing quote character
          .replace(/\x08/g, '\\b') // backspace
          .replace(/\t/g, '\\t')   // horizontal tab
          .replace(/\n/g, '\\n')   // line feed
          .replace(/\f/g, '\\f')   // form feed
          .replace(/\r/g, '\\r')   // carriage return
          .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
          + '"';
      }

      var result = {
        /*
         * Parses the input with a generated parser. If the parsing is successfull,
         * returns a value explicitly or implicitly specified by the grammar from
         * which the parser was generated (see |PEG.buildParser|). If the parsing is
         * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
         */
        parse: function(input, startRule) {
          var parseFunctions = {
            "fragment": parse_fragment,
            "range": parse_range,
            "path": parse_path,
            "local_path": parse_local_path,
            "indexStep": parse_indexStep,
            "indirectionStep": parse_indirectionStep,
            "terminus": parse_terminus,
            "idAssertion": parse_idAssertion,
            "textLocationAssertion": parse_textLocationAssertion,
            "parameter": parse_parameter,
            "csv": parse_csv,
            "valueNoSpace": parse_valueNoSpace,
            "value": parse_value,
            "escapedSpecialChars": parse_escapedSpecialChars,
            "number": parse_number,
            "integer": parse_integer,
            "space": parse_space,
            "circumflex": parse_circumflex,
            "doubleQuote": parse_doubleQuote,
            "squareBracket": parse_squareBracket,
            "parentheses": parse_parentheses,
            "comma": parse_comma,
            "semicolon": parse_semicolon,
            "equal": parse_equal,
            "character": parse_character
          };

          if (startRule !== undefined) {
            if (parseFunctions[startRule] === undefined) {
              throw new Error("Invalid rule name: " + quote(startRule) + ".");
            }
          } else {
            startRule = "fragment";
          }

          var pos = 0;
          var reportFailures = 0;
          var rightmostFailuresPos = 0;
          var rightmostFailuresExpected = [];

          function padLeft(input, padding, length) {
            var result = input;

            var padLength = length - input.length;
            for (var i = 0; i < padLength; i++) {
              result = padding + result;
            }

            return result;
          }

          function escape(ch) {
            var charCode = ch.charCodeAt(0);
            var escapeChar;
            var length;

            if (charCode <= 0xFF) {
              escapeChar = 'x';
              length = 2;
            } else {
              escapeChar = 'u';
              length = 4;
            }

            return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
          }

          function matchFailed(failure) {
            if (pos < rightmostFailuresPos) {
              return;
            }

            if (pos > rightmostFailuresPos) {
              rightmostFailuresPos = pos;
              rightmostFailuresExpected = [];
            }

            rightmostFailuresExpected.push(failure);
          }

          function parse_fragment() {
            var result0, result1, result2;
            var pos0, pos1;

            pos0 = pos;
            pos1 = pos;
            if (input.substr(pos, 8) === "epubcfi(") {
              result0 = "epubcfi(";
              pos += 8;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"epubcfi(\"");
              }
            }
            if (result0 !== null) {
              result1 = parse_range();
              if (result1 === null) {
                result1 = parse_path();
              }
              if (result1 !== null) {
                if (input.charCodeAt(pos) === 41) {
                  result2 = ")";
                  pos++;
                } else {
                  result2 = null;
                  if (reportFailures === 0) {
                    matchFailed("\")\"");
                  }
                }
                if (result2 !== null) {
                  result0 = [result0, result1, result2];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, fragmentVal) {

                    return { type:"CFIAST", cfiString:fragmentVal };
                })(pos0, result0[1]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_range() {
            var result0, result1, result2, result3, result4, result5;
            var pos0, pos1;

            pos0 = pos;
            pos1 = pos;
            result0 = parse_indexStep();
            if (result0 !== null) {
              result1 = parse_local_path();
              if (result1 !== null) {
                if (input.charCodeAt(pos) === 44) {
                  result2 = ",";
                  pos++;
                } else {
                  result2 = null;
                  if (reportFailures === 0) {
                    matchFailed("\",\"");
                  }
                }
                if (result2 !== null) {
                  result3 = parse_local_path();
                  if (result3 !== null) {
                    if (input.charCodeAt(pos) === 44) {
                      result4 = ",";
                      pos++;
                    } else {
                      result4 = null;
                      if (reportFailures === 0) {
                        matchFailed("\",\"");
                      }
                    }
                    if (result4 !== null) {
                      result5 = parse_local_path();
                      if (result5 !== null) {
                        result0 = [result0, result1, result2, result3, result4, result5];
                      } else {
                        result0 = null;
                        pos = pos1;
                      }
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, stepVal, localPathVal, rangeLocalPath1Val, rangeLocalPath2Val) {

                    return { type:"range", path:stepVal, localPath:localPathVal, range1:rangeLocalPath1Val, range2:rangeLocalPath2Val };
              })(pos0, result0[0], result0[1], result0[3], result0[5]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_path() {
            var result0, result1;
            var pos0, pos1;

            pos0 = pos;
            pos1 = pos;
            result0 = parse_indexStep();
            if (result0 !== null) {
              result1 = parse_local_path();
              if (result1 !== null) {
                result0 = [result0, result1];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, stepVal, localPathVal) {

                    return { type:"path", path:stepVal, localPath:localPathVal };
                })(pos0, result0[0], result0[1]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_local_path() {
            var result0, result1;
            var pos0, pos1;

            pos0 = pos;
            pos1 = pos;
            result1 = parse_indexStep();
            if (result1 === null) {
              result1 = parse_indirectionStep();
            }
            if (result1 !== null) {
              result0 = [];
              while (result1 !== null) {
                result0.push(result1);
                result1 = parse_indexStep();
                if (result1 === null) {
                  result1 = parse_indirectionStep();
                }
              }
            } else {
              result0 = null;
            }
            if (result0 !== null) {
              result1 = parse_terminus();
              result1 = result1 !== null ? result1 : "";
              if (result1 !== null) {
                result0 = [result0, result1];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, localPathStepVal, termStepVal) {

                    return { steps:localPathStepVal, termStep:termStepVal };
                })(pos0, result0[0], result0[1]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_indexStep() {
            var result0, result1, result2, result3, result4;
            var pos0, pos1, pos2;

            pos0 = pos;
            pos1 = pos;
            if (input.charCodeAt(pos) === 47) {
              result0 = "/";
              pos++;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"/\"");
              }
            }
            if (result0 !== null) {
              result1 = parse_integer();
              if (result1 !== null) {
                pos2 = pos;
                if (input.charCodeAt(pos) === 91) {
                  result2 = "[";
                  pos++;
                } else {
                  result2 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"[\"");
                  }
                }
                if (result2 !== null) {
                  result3 = parse_idAssertion();
                  if (result3 !== null) {
                    if (input.charCodeAt(pos) === 93) {
                      result4 = "]";
                      pos++;
                    } else {
                      result4 = null;
                      if (reportFailures === 0) {
                        matchFailed("\"]\"");
                      }
                    }
                    if (result4 !== null) {
                      result2 = [result2, result3, result4];
                    } else {
                      result2 = null;
                      pos = pos2;
                    }
                  } else {
                    result2 = null;
                    pos = pos2;
                  }
                } else {
                  result2 = null;
                  pos = pos2;
                }
                result2 = result2 !== null ? result2 : "";
                if (result2 !== null) {
                  result0 = [result0, result1, result2];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, stepLengthVal, assertVal) {

                    return { type:"indexStep", stepLength:stepLengthVal, idAssertion:assertVal[1] };
                })(pos0, result0[1], result0[2]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_indirectionStep() {
            var result0, result1, result2, result3, result4;
            var pos0, pos1, pos2;

            pos0 = pos;
            pos1 = pos;
            if (input.substr(pos, 2) === "!/") {
              result0 = "!/";
              pos += 2;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"!/\"");
              }
            }
            if (result0 !== null) {
              result1 = parse_integer();
              if (result1 !== null) {
                pos2 = pos;
                if (input.charCodeAt(pos) === 91) {
                  result2 = "[";
                  pos++;
                } else {
                  result2 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"[\"");
                  }
                }
                if (result2 !== null) {
                  result3 = parse_idAssertion();
                  if (result3 !== null) {
                    if (input.charCodeAt(pos) === 93) {
                      result4 = "]";
                      pos++;
                    } else {
                      result4 = null;
                      if (reportFailures === 0) {
                        matchFailed("\"]\"");
                      }
                    }
                    if (result4 !== null) {
                      result2 = [result2, result3, result4];
                    } else {
                      result2 = null;
                      pos = pos2;
                    }
                  } else {
                    result2 = null;
                    pos = pos2;
                  }
                } else {
                  result2 = null;
                  pos = pos2;
                }
                result2 = result2 !== null ? result2 : "";
                if (result2 !== null) {
                  result0 = [result0, result1, result2];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, stepLengthVal, assertVal) {

                    return { type:"indirectionStep", stepLength:stepLengthVal, idAssertion:assertVal[1] };
                })(pos0, result0[1], result0[2]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_terminus() {
            var result0, result1, result2, result3, result4;
            var pos0, pos1, pos2;

            pos0 = pos;
            pos1 = pos;
            if (input.charCodeAt(pos) === 58) {
              result0 = ":";
              pos++;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\":\"");
              }
            }
            if (result0 !== null) {
              result1 = parse_integer();
              if (result1 !== null) {
                pos2 = pos;
                if (input.charCodeAt(pos) === 91) {
                  result2 = "[";
                  pos++;
                } else {
                  result2 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"[\"");
                  }
                }
                if (result2 !== null) {
                  result3 = parse_textLocationAssertion();
                  if (result3 !== null) {
                    if (input.charCodeAt(pos) === 93) {
                      result4 = "]";
                      pos++;
                    } else {
                      result4 = null;
                      if (reportFailures === 0) {
                        matchFailed("\"]\"");
                      }
                    }
                    if (result4 !== null) {
                      result2 = [result2, result3, result4];
                    } else {
                      result2 = null;
                      pos = pos2;
                    }
                  } else {
                    result2 = null;
                    pos = pos2;
                  }
                } else {
                  result2 = null;
                  pos = pos2;
                }
                result2 = result2 !== null ? result2 : "";
                if (result2 !== null) {
                  result0 = [result0, result1, result2];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, textOffsetValue, textLocAssertVal) {

                    return { type:"textTerminus", offsetValue:textOffsetValue, textAssertion:textLocAssertVal[1] };
                })(pos0, result0[1], result0[2]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_idAssertion() {
            var result0;
            var pos0;

            pos0 = pos;
            result0 = parse_value();
            if (result0 !== null) {
              result0 = (function(offset, idVal) {

                    return idVal;
                })(pos0, result0);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_textLocationAssertion() {
            var result0, result1;
            var pos0, pos1;

            pos0 = pos;
            pos1 = pos;
            result0 = parse_csv();
            result0 = result0 !== null ? result0 : "";
            if (result0 !== null) {
              result1 = parse_parameter();
              result1 = result1 !== null ? result1 : "";
              if (result1 !== null) {
                result0 = [result0, result1];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, csvVal, paramVal) {

                    return { type:"textLocationAssertion", csv:csvVal, parameter:paramVal };
                })(pos0, result0[0], result0[1]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_parameter() {
            var result0, result1, result2, result3;
            var pos0, pos1;

            pos0 = pos;
            pos1 = pos;
            if (input.charCodeAt(pos) === 59) {
              result0 = ";";
              pos++;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\";\"");
              }
            }
            if (result0 !== null) {
              result1 = parse_valueNoSpace();
              if (result1 !== null) {
                if (input.charCodeAt(pos) === 61) {
                  result2 = "=";
                  pos++;
                } else {
                  result2 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"=\"");
                  }
                }
                if (result2 !== null) {
                  result3 = parse_valueNoSpace();
                  if (result3 !== null) {
                    result0 = [result0, result1, result2, result3];
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, paramLHSVal, paramRHSVal) {

                    return { type:"parameter", LHSValue:paramLHSVal, RHSValue:paramRHSVal };
                })(pos0, result0[1], result0[3]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_csv() {
            var result0, result1, result2;
            var pos0, pos1;

            pos0 = pos;
            pos1 = pos;
            result0 = parse_value();
            result0 = result0 !== null ? result0 : "";
            if (result0 !== null) {
              if (input.charCodeAt(pos) === 44) {
                result1 = ",";
                pos++;
              } else {
                result1 = null;
                if (reportFailures === 0) {
                  matchFailed("\",\"");
                }
              }
              if (result1 !== null) {
                result2 = parse_value();
                result2 = result2 !== null ? result2 : "";
                if (result2 !== null) {
                  result0 = [result0, result1, result2];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, preAssertionVal, postAssertionVal) {

                    return { type:"csv", preAssertion:preAssertionVal, postAssertion:postAssertionVal };
                })(pos0, result0[0], result0[2]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_valueNoSpace() {
            var result0, result1;
            var pos0;

            pos0 = pos;
            result1 = parse_escapedSpecialChars();
            if (result1 === null) {
              result1 = parse_character();
            }
            if (result1 !== null) {
              result0 = [];
              while (result1 !== null) {
                result0.push(result1);
                result1 = parse_escapedSpecialChars();
                if (result1 === null) {
                  result1 = parse_character();
                }
              }
            } else {
              result0 = null;
            }
            if (result0 !== null) {
              result0 = (function(offset, stringVal) {

                    return stringVal.join('');
                })(pos0, result0);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_value() {
            var result0, result1;
            var pos0;

            pos0 = pos;
            result1 = parse_escapedSpecialChars();
            if (result1 === null) {
              result1 = parse_character();
              if (result1 === null) {
                result1 = parse_space();
              }
            }
            if (result1 !== null) {
              result0 = [];
              while (result1 !== null) {
                result0.push(result1);
                result1 = parse_escapedSpecialChars();
                if (result1 === null) {
                  result1 = parse_character();
                  if (result1 === null) {
                    result1 = parse_space();
                  }
                }
              }
            } else {
              result0 = null;
            }
            if (result0 !== null) {
              result0 = (function(offset, stringVal) {

                    return stringVal.join('');
                })(pos0, result0);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_escapedSpecialChars() {
            var result0, result1;
            var pos0, pos1;

            pos0 = pos;
            pos1 = pos;
            result0 = parse_circumflex();
            if (result0 !== null) {
              result1 = parse_circumflex();
              if (result1 !== null) {
                result0 = [result0, result1];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 === null) {
              pos1 = pos;
              result0 = parse_circumflex();
              if (result0 !== null) {
                result1 = parse_squareBracket();
                if (result1 !== null) {
                  result0 = [result0, result1];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
              if (result0 === null) {
                pos1 = pos;
                result0 = parse_circumflex();
                if (result0 !== null) {
                  result1 = parse_parentheses();
                  if (result1 !== null) {
                    result0 = [result0, result1];
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
                if (result0 === null) {
                  pos1 = pos;
                  result0 = parse_circumflex();
                  if (result0 !== null) {
                    result1 = parse_comma();
                    if (result1 !== null) {
                      result0 = [result0, result1];
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                  if (result0 === null) {
                    pos1 = pos;
                    result0 = parse_circumflex();
                    if (result0 !== null) {
                      result1 = parse_semicolon();
                      if (result1 !== null) {
                        result0 = [result0, result1];
                      } else {
                        result0 = null;
                        pos = pos1;
                      }
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                    if (result0 === null) {
                      pos1 = pos;
                      result0 = parse_circumflex();
                      if (result0 !== null) {
                        result1 = parse_equal();
                        if (result1 !== null) {
                          result0 = [result0, result1];
                        } else {
                          result0 = null;
                          pos = pos1;
                        }
                      } else {
                        result0 = null;
                        pos = pos1;
                      }
                    }
                  }
                }
              }
            }
            if (result0 !== null) {
              result0 = (function(offset, escSpecCharVal) {

                    return escSpecCharVal[1];
                })(pos0, result0);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_number() {
            var result0, result1, result2, result3;
            var pos0, pos1, pos2;

            pos0 = pos;
            pos1 = pos;
            pos2 = pos;
            if (/^[1-9]/.test(input.charAt(pos))) {
              result0 = input.charAt(pos);
              pos++;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("[1-9]");
              }
            }
            if (result0 !== null) {
              if (/^[0-9]/.test(input.charAt(pos))) {
                result2 = input.charAt(pos);
                pos++;
              } else {
                result2 = null;
                if (reportFailures === 0) {
                  matchFailed("[0-9]");
                }
              }
              if (result2 !== null) {
                result1 = [];
                while (result2 !== null) {
                  result1.push(result2);
                  if (/^[0-9]/.test(input.charAt(pos))) {
                    result2 = input.charAt(pos);
                    pos++;
                  } else {
                    result2 = null;
                    if (reportFailures === 0) {
                      matchFailed("[0-9]");
                    }
                  }
                }
              } else {
                result1 = null;
              }
              if (result1 !== null) {
                result0 = [result0, result1];
              } else {
                result0 = null;
                pos = pos2;
              }
            } else {
              result0 = null;
              pos = pos2;
            }
            if (result0 !== null) {
              if (input.charCodeAt(pos) === 46) {
                result1 = ".";
                pos++;
              } else {
                result1 = null;
                if (reportFailures === 0) {
                  matchFailed("\".\"");
                }
              }
              if (result1 !== null) {
                pos2 = pos;
                result2 = [];
                if (/^[0-9]/.test(input.charAt(pos))) {
                  result3 = input.charAt(pos);
                  pos++;
                } else {
                  result3 = null;
                  if (reportFailures === 0) {
                    matchFailed("[0-9]");
                  }
                }
                while (result3 !== null) {
                  result2.push(result3);
                  if (/^[0-9]/.test(input.charAt(pos))) {
                    result3 = input.charAt(pos);
                    pos++;
                  } else {
                    result3 = null;
                    if (reportFailures === 0) {
                      matchFailed("[0-9]");
                    }
                  }
                }
                if (result2 !== null) {
                  if (/^[1-9]/.test(input.charAt(pos))) {
                    result3 = input.charAt(pos);
                    pos++;
                  } else {
                    result3 = null;
                    if (reportFailures === 0) {
                      matchFailed("[1-9]");
                    }
                  }
                  if (result3 !== null) {
                    result2 = [result2, result3];
                  } else {
                    result2 = null;
                    pos = pos2;
                  }
                } else {
                  result2 = null;
                  pos = pos2;
                }
                if (result2 !== null) {
                  result0 = [result0, result1, result2];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, intPartVal, fracPartVal) {

                    return intPartVal.join('') + "." + fracPartVal.join('');
                })(pos0, result0[0], result0[2]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_integer() {
            var result0, result1, result2;
            var pos0, pos1;

            pos0 = pos;
            if (input.charCodeAt(pos) === 48) {
              result0 = "0";
              pos++;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"0\"");
              }
            }
            if (result0 === null) {
              pos1 = pos;
              if (/^[1-9]/.test(input.charAt(pos))) {
                result0 = input.charAt(pos);
                pos++;
              } else {
                result0 = null;
                if (reportFailures === 0) {
                  matchFailed("[1-9]");
                }
              }
              if (result0 !== null) {
                result1 = [];
                if (/^[0-9]/.test(input.charAt(pos))) {
                  result2 = input.charAt(pos);
                  pos++;
                } else {
                  result2 = null;
                  if (reportFailures === 0) {
                    matchFailed("[0-9]");
                  }
                }
                while (result2 !== null) {
                  result1.push(result2);
                  if (/^[0-9]/.test(input.charAt(pos))) {
                    result2 = input.charAt(pos);
                    pos++;
                  } else {
                    result2 = null;
                    if (reportFailures === 0) {
                      matchFailed("[0-9]");
                    }
                  }
                }
                if (result1 !== null) {
                  result0 = [result0, result1];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            }
            if (result0 !== null) {
              result0 = (function(offset, integerVal) {

                    if (integerVal === "0") {
                      return "0";
                    }
                    else {
                      return integerVal[0].concat(integerVal[1].join(''));
                    }
                })(pos0, result0);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_space() {
            var result0;
            var pos0;

            pos0 = pos;
            if (input.charCodeAt(pos) === 32) {
              result0 = " ";
              pos++;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\" \"");
              }
            }
            if (result0 !== null) {
              result0 = (function(offset) { return " "; })(pos0);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_circumflex() {
            var result0;
            var pos0;

            pos0 = pos;
            if (input.charCodeAt(pos) === 94) {
              result0 = "^";
              pos++;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"^\"");
              }
            }
            if (result0 !== null) {
              result0 = (function(offset) { return "^"; })(pos0);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_doubleQuote() {
            var result0;
            var pos0;

            pos0 = pos;
            if (input.charCodeAt(pos) === 34) {
              result0 = "\"";
              pos++;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"\\\"\"");
              }
            }
            if (result0 !== null) {
              result0 = (function(offset) { return '"'; })(pos0);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_squareBracket() {
            var result0;
            var pos0;

            pos0 = pos;
            if (input.charCodeAt(pos) === 91) {
              result0 = "[";
              pos++;
            } else {
              result0 = null;
              if (reportFailures === 0) {
                matchFailed("\"[\"");
              }
            }
            if (result0 === null) {
              if (input.charCodeAt(pos) === 93) {
                result0 = "]";
                pos++;
              } else {
                result0 = null;
                if (reportFailures === 0) {
                  matchFailed("\"]\"");
                }
              }
            }
            if (result0 !== null) {
              result0 = (function(offset, bracketVal) { return bracketVal; })(pos0, result0);
            }
            if (result0 === null) {
              pos = pos0;
            }
            return result0;
          }

          function parse_parentheses() {
            var result0;
            var pos0;
